[project]
name = "project1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-gemini>=0.1.1",
    "langchain-groq>=0.3.8",
    "langchain-huggingface>=0.0.8",
    "langgraph>=0.6.7",
    "python-dotenv>=1.1.1",
    "fastapi",
    "uvicorn[standard]",
    "huggingface_hub>=0.26.5",
]
